--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "workadventure-map-starter-kit",
+  "name": "startup",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
